third_party/move/move-compiler-v2/tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.exp

Diagnostics:
error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
  ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:6:16
  │
6 │     public fun t<T>() {
  │                ^
  │
  = `t<T>` calls `t<X::Box<T>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:7

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:10:16
   │
10 │     public fun x<T>() {
   │                ^
   │
   = `x<T>` calls `y<X::Box<T>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:11
   = `y<X::Box<T>>` calls `x<X::Box<X::Box<T>>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:14

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:13:16
   │
13 │     public fun y<T>() {
   │                ^
   │
   = `y<T>` calls `x<X::Box<T>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:14
   = `x<X::Box<T>>` calls `y<X::Box<X::Box<T>>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:11

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:17:16
   │
17 │     public fun a<A>() {
   │                ^
   │
   = `a<A>` calls `b<A>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:18
   = `b<A>` calls `c<A>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:21
   = `c<A>` calls `a<X::Box<A>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:24

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:20:16
   │
20 │     public fun b<B>() {
   │                ^
   │
   = `b<B>` calls `c<B>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:21
   = `c<B>` calls `a<X::Box<B>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:24
   = `a<X::Box<B>>` calls `b<X::Box<B>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:18

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:23:16
   │
23 │     public fun c<C>() {
   │                ^
   │
   = `c<C>` calls `a<X::Box<C>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:24
   = `a<X::Box<C>>` calls `b<X::Box<C>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:18
   = `b<X::Box<C>>` calls `c<X::Box<C>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:21

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:37:16
   │
37 │     public fun z<T>() {
   │                ^
   │
   = `z<T>` calls `z<Y::Box<T>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:38

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:41:16
   │
41 │     public fun a<A>() {
   │                ^
   │
   = `a<A>` calls `b<A>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:42
   = `b<A>` calls `c<A>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:45
   = `c<A>` calls `d<Y::Box<A>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:48
   = `d<Y::Box<A>>` calls `a<Y::Box<A>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:51

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:44:16
   │
44 │     public fun b<B>() {
   │                ^
   │
   = `b<B>` calls `c<B>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:45
   = `c<B>` calls `d<Y::Box<B>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:48
   = `d<Y::Box<B>>` calls `a<Y::Box<B>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:51
   = `a<Y::Box<B>>` calls `b<Y::Box<B>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:42

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:47:16
   │
47 │     public fun c<C>() {
   │                ^
   │
   = `c<C>` calls `d<Y::Box<C>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:48
   = `d<Y::Box<C>>` calls `a<Y::Box<C>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:51
   = `a<Y::Box<C>>` calls `b<Y::Box<C>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:42
   = `b<Y::Box<C>>` calls `c<Y::Box<C>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:45

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:50:16
   │
50 │     public fun d<D>() {
   │                ^
   │
   = `d<D>` calls `a<D>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:51
   = `a<D>` calls `b<D>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:42
   = `b<D>` calls `c<D>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:45
   = `c<D>` calls `d<Y::Box<D>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:48

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:58:16
   │
58 │     public fun tl<TL>() {
   │                ^^
   │
   = `tl<TL>` calls `tr<TL>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:59
   = `tr<TL>` calls `bl<Z::Box<TL>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:62
   = `bl<Z::Box<TL>>` calls `tl<Z::Box<TL>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:69

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:61:16
   │
61 │     public fun tr<TR>() {
   │                ^^
   │
   = `tr<TR>` calls `bl<Z::Box<TR>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:62
   = `bl<Z::Box<TR>>` calls `tl<Z::Box<TR>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:69
   = `tl<Z::Box<TR>>` calls `tr<Z::Box<TR>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:59

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:68:16
   │
68 │     public fun bl<BL>() {
   │                ^^
   │
   = `bl<BL>` calls `tl<BL>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:69
   = `tl<BL>` calls `tr<BL>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:59
   = `tr<BL>` calls `bl<Z::Box<BL>>` at tests/cyclic-instantiation-checker/v1-typing/infinite_instantiations_invalid.move:62
